src/components/Table/Table.scss
@use '@gravity-ui/uikit/styles/mixins';
@use '../variables';

$block: '.#{variables.$ns}styled-table';

#{$block} {
    &__header {
        background: var(--g-color-base-background);
    }

    &__cell {
        @include mixins.text-body-1();
    }

    &__header-cell {
        @include mixins.text-subheader-1();
    }

    &_size {
        &_s {
            --_--cell-padding: 7px var(--g-spacing-2) 6px;
        }

        &_m {
            --_--cell-padding: 11px var(--g-spacing-2) 10px;
        }
    }

    &__cell,
    &__header-cell,
    &__footer-cell {
        padding: var(--_--cell-padding);
        border-block-end: 1px solid var(--g-color-line-generic);
    }

    &__row {
        &:last-of-type {
            #{$block}__cell {
                border-block-end: none;
            }
        }

        &_vertical-align {
            &_top {
                vertical-align: top;
            }

            &_center {
                vertical-align: middle;
            }

            &_bottom {
                vertical-align: bottom;
            }
        }
    }
}

